# rust-practice

./: Cargo.toml  Readme.md
algos/src/: bus_routes.rs  fruits_into_baskets_ii.rs  guessing_game.rs  lib.rs  lru.rs  lru_bitmap.rs
algos/src/graph/: mod.rs  scc.rs  topological_sort.rs
algos/src/problems/: bus_routes.rs  is_tree_same.rs  local_cache.rs  lru.rs  lru_bitmap.rs  max_binary_depth.rs  maximum_xor_two_numbers_in_array.rs  mod.rs  search.rs  valid_parentheses.rs
asyncs/: Cargo.toml
asyncs/async_hello/: Cargo.toml
asyncs/async_hello/src/: main.rs
asyncs/async_mutex/: Cargo.toml
asyncs/async_mutex/src/: main.rs
asyncs/blocking/: Cargo.toml
asyncs/blocking/src/: main.rs
asyncs/channels/: Cargo.toml
asyncs/channels/src/: main.rs
asyncs/db/: Cargo.toml  hello_db.db  hello_db.db-wal
asyncs/db/migrations/: 20250909220144_more_messages.sql
asyncs/db/src/: main.rs
asyncs/errors/: Cargo.toml
asyncs/errors/src/: main.rs
asyncs/fileio/: Cargo.toml
asyncs/fileio/src/: main.rs
asyncs/image_service/: Cargo.toml  images.db  images.db-shm  images.db-wal
asyncs/image_service/src/: index.html  main.rs
asyncs/logspan/: Cargo.toml
asyncs/logspan/src/: main.rs
asyncs/rec/: Cargo.toml
asyncs/rec/src/: main.rs
asyncs/restclient/: Cargo.toml
asyncs/restclient/src/: main.rs
asyncs/select/: Cargo.toml
asyncs/select/src/: main.rs
asyncs/tcpserver/: Cargo.toml
asyncs/tcpserver/src/: main.rs
asyncs/testing/: Cargo.toml
asyncs/testing/src/: main.rs
asyncs/tokio_select/: Cargo.toml
asyncs/tokio_select/src/: main.rs
asyncs/web_service/: Cargo.toml
asyncs/web_service/src/: main.rs
bus_routes/: Cargo.toml
bus_routes/src/: main.rs
bytes/src/: main.rs
cycles/src/: main.rs
fruits_into_baskets_ii/: Cargo.toml
fruits_into_baskets_ii/src/: main.rs
init/auth/: users.json
init/auth/src/: lib.rs
init/login_manager/: Cargo.toml
init/login_manager/src/: main.rs
iters/src/: main.rs
local-cache/: Cargo.toml
local-cache/src/: main.rs
maximum_xor_two_numbers_in_array/: Cargo.toml
maximum_xor_two_numbers_in_array/src/: main.rs
mem/: Cargo.toml
mem/interior_mut/src/: main.rs
mem/refc/src/: main.rs
mem/smart_pointer/src/: main.rs
mem/src/: main.rs
mem/traits/src/: main.rs
rustlings/exercises/05_vecs/: vecs2.rs
rustlings/exercises/07_structs/: structs1.rs
rustlings/exercises/08_enums/: enums3.rs
rustlings/exercises/10_modules/: modules3.rs
rustlings/exercises/11_hashmaps/: hashmaps3.rs
rustlings/exercises/12_options/: options2.rs  options3.rs
rustlings/exercises/13_error_handling/: errors1.rs  errors4.rs  errors5.rs  errors6.rs
rustlings/exercises/16_lifetimes/: lifetimes1.rs
rustlings/exercises/18_iterators/: iterators3.rs  iterators4.rs  iterators5.rs
rustlings/exercises/19_smart_pointers/: arc1.rs
rustlings/exercises/20_threads/: threads2.rs
rustlings/exercises/22_clippy/: clippy3.rs
rustlings/exercises/23_conversions/: as_ref_mut.rs  from_into.rs  from_str.rs  try_from_into.rs
rustlings/exercises/quizzes/: quiz1.rs  quiz2.rs
session1/auth/: Cargo.toml
session1/auth/src/: lib.rs
session1/login/: users.json
session1/login/src/: main.rs
session1/login_manager/: users.json
session1/login_manager/src/: main.rs
session1/vars/src/: main.rs
session2/: Cargo.toml
session2/gun/: Cargo.toml
session2/mutexes/: Cargo.toml
session2/src/: main.rs
session2/tprio/: Cargo.toml
shared_data/: Cargo.toml
shared_data/src/: lib.rs
src/: main.rs
systhreads/: Cargo.toml
systhreads/chans/: Cargo.toml
systhreads/dmap/: Cargo.toml
(+22 files in other folders)
