[package]
name = "rust-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[workspace]
members = [
    "session1/vars",
    "session1/auth",
    "session1/login",
    "session1/login_manager",
    "session2",
    "session2/divide_work",
    "session2/scope",
    "session2/gun",
    "session2/mutexes",
    "session2/deadlock",
    "session2/dmap",
    "session2/parking",
    "session2/chans",
    "session2/workers",
    "session2/workers2",
    "session2/arcs",
    "local-cache",
    "rustlings"
]
