[package]
name = "rust-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algos = { path = "algos" }
tokio = { workspace = true, features = ["full"] }


[workspace]
members = [
    "algos",
    "init/vars",
    "init/auth",
    "init/login",
    "init/login_manager",
    "systhreads",
    "systhreads/divide_work",
    "systhreads/scope",
    "systhreads/gun",
    "systhreads/mutexes",
    "systhreads/deadlock",
    "systhreads/dmap",
    "systhreads/parking",
    "systhreads/chans",
    "systhreads/workers",
    "systhreads/workers2",
    "systhreads/arcs",
    "systhreads/affinity",
    "systhreads/tprio",
    "systhreads/rayon_iters",
    "systhreads/rayon_scopes",
    "rustlings", 
    "asyncs",
    "asyncs/async_hello",
    "asyncs/blocking",
    "asyncs/testing",
    "asyncs/errors",
    "asyncs/fileio"
]

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
