[package]
name = "image_service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["multipart"] }
dotenv = "0.15.0"
futures = "0.3.31"
image = "0.25.8"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }
